--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "datasette-query-assistant"
-version = "0.1"
+version = "0.1a0"
 description = "Query databases and tables with AI assistance"
 readme = "README.md"
 authors = [{name = "Simon Willison"}]
