--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ CI = "https://github.com/datasette/datasette-query-assistant/actions"
 query_assistant = "datasette_query_assistant"
 
 [project.optional-dependencies]
-test = ["pytest", "pytest-asyncio", "pytest-recording", "sqlite-utils"]
+test = ["inline-snapshot", "pytest", "pytest-asyncio", "pytest-recording", "sqlite-utils"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
