--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,15 @@ version = "0.1a2"
 description = "Query databases and tables with AI assistance"
 readme = "README.md"
 authors = [{name = "Simon Willison"}]
-license = {text = "Apache-2.0"}
+license = "Apache-2.0"
 classifiers=[
-    "Framework :: Datasette",
-    "License :: OSI Approved :: Apache Software License"
+    "Framework :: Datasette"
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
-    "datasette",
-    "anthropic"
+    "datasette>=1.0a0",
+    "llm>=0.22",
+    "markdown2",
 ]
 
 [project.urls]
