--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "datasette-query-assistant"
-version = "0.1a2"
+version = "0.1a3"
 description = "Query databases and tables with AI assistance"
 readme = "README.md"
 authors = [{name = "Simon Willison"}]
@@ -25,7 +25,7 @@ CI = "https://github.com/datasette/datasette-query-assistant/actions"
 query_assistant = "datasette_query_assistant"
 
 [project.optional-dependencies]
-test = ["inline-snapshot", "pytest", "pytest-asyncio", "pytest-recording", "sqlite-utils"]
+test = ["llm-openai-plugin", "inline-snapshot", "pytest", "pytest-asyncio", "pytest-recording", "sqlite-utils"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
