--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ license = "Apache-2.0"
 classifiers=[
     "Framework :: Datasette"
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
-    "datasette==1.0a19",
+    "datasette>=1.0a21",
     "llm>=0.22",
     "markdown2",
 ]
